chore: add new middware
